Update dependencies to 1.7.1 beta version

--- a/core-sample/build.gradle
+++ b/core-sample/build.gradle
@@ -89,8 +89,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // IAR dependencies
-    implementation 'com.github.ImagineAR:iar-core-android:1.6.0'
-    implementation 'com.github.ImagineAR:iar-surface-android:1.6.0'
+    implementation 'com.github.ImagineAR:iar-core-android-beta:1.7.1'
+    implementation 'com.github.ImagineAR:iar-surface-android-beta:1.7.1'
 
     //Preference
     implementation 'androidx.preference:preference:1.1.1'
